fix search position on mobile

--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,14 +1,15 @@
 .root {
   position: fixed;
   top: 100px;
+  left: 0;
   width: 100%;
   padding-inline: 15px;
 
   border-radius: 28px;
-  pointer-events: auto;
   z-index: 2;
   @media only screen and (min-width: 670px) {
     top: unset;
+    left: unset;
     position: relative;
     padding-inline: 0;
 
